reduced the width to 300px to avoid jumping of sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
 
 #gameboard {
 	background-color: #14bdac;
-	padding: 15px;
-	width: 400px;
+	padding: 10px;
+	width: 300px;
 }
 
 span {
@@ -30,12 +30,12 @@ span {
 
 #scoreboard td {
 	height: 32px;
-	width: 32px;
-	padding-bottom: 0px;
-	padding-top: 0px;
+	width: 96px;
+	padding-bottom: 1px;
+	padding-top: 1px;
 	padding-right: 24px;
 	padding-left: 24px;
-	border: none;
+	/*border: none;*/
 }
 
 #gameboard table {
@@ -67,4 +67,22 @@ span {
 	border-bottom: 0px;
 	border-color: grey;
     border-width: 4px;
+}
+
+#score-x {
+	background-color: #F1EDEC;
+	border-color: #14bdac;
+		border-width: 2px;
+		border-right-width: 0px;
+		border-top-width: 0px;
+		box-shadow: 5px 10px blur;
+
+}
+
+#focus-score-x {
+	border-width: 2px;
+}
+
+#score-o {
+	background-color: #F1EDEC;
 }
